--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     </header>
 
     <section>
-      <!-- <img id="logo" src="imagens/logo.png" alt="logo-acogue"> -->
       <div class="heroTitles">
         <h1>Delícias <span class="colorTwo">Exóticas</span></h1>
         <h2> <span class="colorTwo">Não existes churracaria</span> melhor que a nossa casa!</h2>
@@ -36,8 +35,6 @@
   <div class="main">
 
     <div id="cardapioIntro">
-
-      <!-- <img src="imagens/menu.png" alt="Menu" id="menuImg"> -->
       <h1>Menu</h1>
 
       <div id="exoticos" class="cardapio">
@@ -152,6 +149,60 @@
     </section>
   </div>
 
+
+  <div id="forms">
+    <form action="./script.js" method="post">
+      <div class="form-input">
+        <input type="text" name="name" id="name" placeholder="Nome *" required>
+      </div>
+
+      <div class="form-input">
+        <input type="text" name="email" id="email" placeholder="Email *" required>
+      </div>
+      
+      <div class="form-input">
+        <input type="text" name="phone" id="phone" placeholder="Telefone *" required>
+      </div>
+
+      <div class="fomr-input" id="radios">
+        <input type="radio" name="tipo-carne" id="exoticas" value="Carnes-exóticas">
+        <label for="exoticas">Carnes exóticas</label>
+        <input type="radio" name="tipo-carne" id="tradicionais" value="Carnes-tradicionais">
+        <label for="tradicionais">Carnes tradicionais</label>
+        <input type="radio" name="tipo-carne" id="ambas" value="Ambas" checked>
+        <label for="ambas">Ambas</label>
+      </div>
+
+      <div class="form-input">
+        <select name="tipos-carnes" id="tipos-carnes">
+          <option value="nao-escolhido">Não escolhido</option>
+          <option value="Bovinas">Bovina</option>
+          <option value="Suina">Suína</option>
+          <option value="Aves">Aves</option>
+          <option value="Frutos-do-mar">Frutos do Mar</option>
+          <option value="Outros">Outros</option>
+        </select>
+      </div>
+
+      <div class="form-input">
+        <input type="checkbox" id="todos-os-meios" name="todos-os-meios" value="Todos-os-meios">
+        <label for="todos-os-meios">Todos os Meios</label>
+        <input type="checkbox" id="email-checkbox" name="E-mail" value="E-mail">
+        <label for="email-checkbox">E-mail</label>
+        <input type="checkbox" id="sms" name="SMS" value="SMS">
+        <label for="sms">SMS</label>
+      </div>
+
+      <div class="form-input">
+        <textarea name="text" id="message" cols="30" rows="10" placeholder="Menssagem *" required></textarea>
+      </div>
+    <div class="form-input">
+      <input type="submit" value="Submit">
+    </div>
+    </form>
+  </div>
+
+
   <div id="location" class="mapouter">
     <div class="gmap_canvas">
       <iframe id="gmap_canvas"
@@ -176,14 +227,6 @@
         <br>
         Preencha o Formulário ou envie sua mensagem diretamente para o nosso email! :)
       </p>
-      <form>
-
-        <input type="text" id="name" name="name" value="Nome *">
-        <br>
-        <input type="text" id="email" name="email" value="Email *">
-        <br>
-        <input type="text" id="mensage" name="mensage" value="Mensagem *">
-      </form>
     </div>
   </section>
 
@@ -196,6 +239,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <script src="mark-box-handler.js"></script>
   <script src="script.js"></script>
 </body>
 
