changed: form and nobres marging

--- a/index.html
+++ b/index.html
@@ -76,16 +76,6 @@
         </div>
       </div>
 
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
 
       <div id="nobres" class="cardapio">
         <h2>Nobres</h2>
@@ -127,12 +117,7 @@
         </div>
       </div>
     </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-
+    
     <section id="aboutUs">
       <img id="aboutUsImg" src="imagens/diaDeChurasco.jpeg" title="Servindo carne">
       <article>
@@ -152,6 +137,7 @@
 
   <div id="forms">
     <form action="./script.js" method="post">
+      <h1>Faça seu pedido</h1>
       <div>
         <input type="text" name="name" id="name" placeholder="Nome *" required>
       </div>
